src/main/metadata/objects/BbqTaskData__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>BBQ-data to create a task</description>
    <fields>
        <fullName>taskActivityDate__c</fullName>
        <label>taskActivityDate</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>taskRecordType__c</fullName>
        <label>taskRecordType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>taskReminderDate__c</fullName>
        <label>taskReminderDate</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BbqTaskData</label>
</CustomObject>